@@ -46,24 +46,24 @@
     <string name="refresh_time_label_str">Refresh time</string>
     <string name="set_as_filter_watcher_button_str">Set this filter for notifications</string>
     <string name="validate_event_button_str">Validate Event</string>
-    <string name="config_update_succesful_str">Update configuration successful.</string>
-    <string name="config_update_fail_str">Update configuration failed.</string>
-    <string name="please_set_preferences_str">Please set the preferences as the API URL, user and password for your Pandora FMS.</string>
-    <string name="preferences_set_demo_pandora_str">Pandroid Event Viewer is connecting with PandoraFMS public demo, please change the preferences for your Pandora FMS.</string>
-    <string name="filter_update_succesful_str">Update filter successful.</string>
-    <string name="filter_update_fail_str">Update filter failed.</string>
-    <string name="notification_criticity_0_str">There are %s events and all in Maintenance state.</string>
-    <string name="notification_criticity_1_str">There are %s events and some are in Informational state.</string>
-    <string name="notification_criticity_2_str">There are %s events and some are in Normal state.</string>
-    <string name="notification_criticity_3_str">There are %s events and some are in Warning state.</string>
-    <string name="notification_criticity_4_str">There are %s events and some are in Critical state.</string>
-    <string name="loading_events_criticity_0_str">Loading events (all in Maintenance state).</string>
-    <string name="loading_events_criticity_1_str">Loading events (some are in Informational state).</string>
-    <string name="loading_events_criticity_2_str">Loading events (some are in Normal state).</string>
-    <string name="loading_events_criticity_3_str">Loading events (some are in Warning state).</string>
-    <string name="loading_events_criticity_4_str">Loading events (some are in Critical state).</string>
-    <string name="successful_validate_event_str">The event validation is successful.</string>
-    <string name="fail_validate_event_str">The event validation has failed.</string>
+    <string name="config_update_succesful_str">Configuration successfully updated.</string>
+    <string name="config_update_fail_str">Configuration update failed.</string>
+    <string name="please_set_preferences_str">Please set your preferences, like the API URL, user and password for your Pandora FMS.</string>
+    <string name="preferences_set_demo_pandora_str">Pandroid Event Viewer is connecting with the Pandora FMS public demo, please change the preferences for your Pandora FMS.</string>
+    <string name="filter_update_succesful_str">Filter successfully updated.</string>
+    <string name="filter_update_fail_str">Filter update failed.</string>
+    <string name="notification_criticity_0_str">There are %s events and all in Maintenance status.</string>
+    <string name="notification_criticity_1_str">There are %s events and some are in Informational status.</string>
+    <string name="notification_criticity_2_str">There are %s events and some are in Normal status.</string>
+    <string name="notification_criticity_3_str">There are %s events and some are in Warning status.</string>
+    <string name="notification_criticity_4_str">There are %s events and some are in Critical status.</string>
+    <string name="loading_events_criticity_0_str">Loading events (all in Maintenance status).</string>
+    <string name="loading_events_criticity_1_str">Loading events (some are in Informational status).</string>
+    <string name="loading_events_criticity_2_str">Loading events (some are in Normal status).</string>
+    <string name="loading_events_criticity_3_str">Loading events (some are in Warning status).</string>
+    <string name="loading_events_criticity_4_str">Loading events (some are in Critical status).</string>
+    <string name="successful_validate_event_str">Event successfully validated.</string>
+    <string name="fail_validate_event_str">Event validation failed.</string>
     <string name="status_label_str">Status</string>
     <string name="event_search_label_str">Event search</string>
     <string name="max_time_old_event_str">Oldest event</string>
@@ -80,9 +80,9 @@
     <string name="unknown_str">Unknown type:</string>
     <string name="unknown_event_str">Unknown event</string>
     <string name="validate_event_label_str">Event validated</string>
-    <string name="pandroid_event_viewer_description_str">Realtime event viewer for Pandora FMS.</string>
+    <string name="pandroid_event_viewer_description_str">Real time event viewer for Pandora FMS.</string>
     <string name="pandroid_info_txt"><b>Welcome to Pandora FMS Event viewer for Android</b></string>
-    <string name="pandroid_info_long_txt"><p>This app is used for to see comfortable and standaralone the events status from the monitoring server of Pandora FMS. From this app you can see in realtime the events and validate or filter.</p><p>The configuration as default connecting with public demo of Pandora FMS in firefly.artica.es. Please change the configuration for to use your Pandora FMS server.</p></string>
+    <string name="pandroid_info_long_txt"><p>This app can be used to display the status of events generated by a Pandora FMS monitoring server in a convenient and autonomous way. From this app you can see events in real time, and even validate or filter them.</p><p>The default configuration points to the Pandora FMS demo server at firefly.artica.es. Please change it to point to your own Pandora FMS server.</p></string>
     <string name="check_connection">Connection status</string>
     <string name="connection">Connection</string>
     <string name="notification">Notification</string>
@@ -106,10 +106,10 @@
     <string name="creating_incident">Creating new incident…</string>
     <string name="create_incident">Create incident</string>
     <string name="create_incident_group_error">There was an error creating the incident: unrecognized event group. Please, contact administrator.</string>
-    <string name="url_not_valid">Incorrect url. Please, insert a valid url</string>
+    <string name="url_not_valid">Invalid URL. Please, insert a valid URL</string>
     <string name="certificate_not_valid">This server has a certificate not signed by a CA, do you trust it?</string>
     <string name="options_not_saved">Options not saved.</string>
-    <string name="notification_error_parsing">There was an error retrieving data from server.</string>
+    <string name="notification_error_parsing">There was an error retrieving data from the server.</string>
     <string name="save_profile_button_str">Save profile</string>
     <string name="profile_label_str">Stored filters</string>
     <string name="filter_options_label_str">Filter options</string>
@@ -122,7 +122,7 @@
     <string name="connection_settings_problem">The operation can not be performed until you configure a correct connection.</string>
     <string name="unknown_version">Unknown version</string>
     <string name="enable_background_service">Check in background</string>
-    <string name="default_profile_can_not_remove">Default profile can not be removed</string>
+    <string name="default_profile_can_not_remove">The default profile can not be removed</string>
     <string name="connection_problems">Connection failed</string>
     <string name="timeout_connections_label_str">Timeout connections</string>
     <string name="seconds_label_str">seconds</string>
