@@ -1,3 +1,8 @@
+2013-11-25  Ramon Novoa  <rnovoa@artica.es>
+
+	* res/values/strings.xml,
+	  res/values-es/strings.xml: Updated some strings.
+
 2013-11-25  Miguel de Dios  <miguel.dedios@artica.es>
 	
 	* AndroidManifest.xml,
